# SACOD_spbu_4sem

./: .gitignore  README.md
final-fields-lib/: CMakeLists.txt  README.md
final-fields-lib/src/: fflib.c  fflib.h  polynom.c  polynom.h  utils.c  utils.h
final-fields-lib/tests/: main.c  minunit.h
libBigInt/: Makefile  README.md  run_all.sh  test
libBigInt/src/: libBigInt.c  libBigInt.h  utils.c  utils.h
libBigInt/tests/: main.c
